--- a/Tech-Doc/tech.html
+++ b/Tech-Doc/tech.html
@@ -7,6 +7,84 @@
     <link rel="stylesheet" href="tech.css">
 </head>
 <body>
+    <!-- Navigation Bar -->
+<nav id="navbar">
+    <header>JS Documentation</header>
+  <a class="nav-link" href="#JavaScript_and_Java">JavaScript and Java</a>
+  <a class="nav-link" href="#Hello_World">Hello World</a>
+  <a class="nav-link" href="#Declaring_variables">Declaring Variables</a>
+  <a class="nav-link" href="#Variable_scope">Variable Scope</a>
+  <a class="nav-link" href="#Global_variables">Global Variables</a>
+  </nav>
+  <!-- end of Navigation Bar -->
+  <main id="main-doc">
     
+    <!-- JavaScript Section -->
+  <section id="JavaScript_and_Java" class="main-section">
+  <header>JavaScript and Java</header>
+  <p>JavaScript and Java are similar in some ways but fundamentally different in some others. The JavaScript language resembles Java but does not have Java's static typing and strong type checking. JavaScript follows most Java expression syntax, naming conventions and basic control-flow constructs which was the reason why it was renamed from LiveScript to JavaScript.</p>
+  <p></p>
+  <code></code>
+  <ul>
+    <li></li>
+  </ul>
+  </section>
+  
+  <!-- Hello World Section -->
+  <section id="Hello_World" class="main-section">
+  <header>Hello World</header>
+  <p></p>
+  <p></p>
+  <code></code>
+  <ul>
+    <li></li>
+  </ul>
+  </section>
+  
+  <!-- Declaring Variables -->
+  <section id="Declaring_variables" class="main-section">
+  <header>Declaring variables</header>
+  <p></p>
+  <p></p>
+  <code></code>
+  <ul>
+    <li></li>
+  </ul>
+  </section>
+  
+  <!-- Variable Scope -->
+  <section id="Variable_scope" class="main-section">
+  <header>Variable scope</header>
+  <p></p>
+  <p></p>
+  <code></code>
+  <ul>
+    <li></li>
+  </ul>
+  </section>
+  
+  <!-- Global Variables -->
+  <section id="Global_variables" class="main-section">
+  <header>Global variables</header>
+  <p></p>
+  <p></p>
+  <code></code>
+  <ul>
+    <li></li>
+  </ul>
+  </section>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  </main>
 </body>
 </html>
